# dronemis2.0

./: LICENCE  README.md
dronemis/: CMakeLists.txt  package.xml
dronemis/launch/: ardrone.launch  dronemis_gui.launch  dronemis_simulation.launch  navdata.launch  production.launch  simulation.launch
dronemis/scripts/: getCVD.sh  getModels.sh  getRoom324.sh
dronemis/src/: Vector3.h  blindFlight.cpp  controller.cpp  debug.h  listener.cpp  main.cpp  talker.cpp
dronemis/src/GUI/: GUI.cpp  GUI.h  VideoHandler.cpp  VideoHandler.h  main_gui.cpp
dronemis/src/GUI/ControlPanel/: controlPanel.pro  controlpanel.cpp  controlpanel.h  controlpanel.ui
dronemis/src/OpenCv/: CV_Handler.cpp  CV_Handler.h  Cascade.cpp  Cascade.h  Color.cpp  Color.h  QR.cpp  QR.h  WallCoordinates.csv
dronemis/src/OpenCv/cascades/: cascade700.xml
dronemis/src/flightControl/: Command.h  FlightController.cpp  FlightController.h  Route.cpp  Route.h  blindFlight.cpp  blindFlight.h  flightPlan.txt
dronemis/src/navdata/: Nav.cpp  Nav.h  log1466102979.csv  log1466103050.csv  log1466103197.csv  log1466103943.csv  log1466104059.csv  log1466104085.csv  log1466105479.csv  log1466105637.csv  log1466105700.csv  log1466105791.csv  log1466105881.csv  log1466105927.csv  log1466105966.csv  log1466106000.csv  log1466106087.csv  log1466106146.csv  log1466106201.csv  log1466106246.csv  log1466106309.csv  log1466106368.csv  log1466106400.csv  log1466106443.csv  log1466106504.csv  log1466106527.csv  log1466106573.csv  log1466106644.csv  log1466106712.csv  log1466106874.csv  log1466107433.csv  log1466107458.csv  log1466107571.csv  log1466107623.csv  log1466107720.csv  log1466107779.csv  log1466107849.csv  log1466107881.csv  log1466108020.csv  log1466108112.csv  (+37 more)
dronemis/src/test/: test  testangles.cpp
